# hf-agents-course

./: .gitignore  README.md  dummy_agent.py  prompts.py  pyproject.toml
agentic-rag/: tools.py
agentic_rag/: agent.py  retriever.py
capstone_agent/: .env.example  .gitignore  README.md  app.py  final_answers.json  main.py
capstone_agent/src/: agent.py  utils.py
capstone_agent/src/tools/: file_io.py  media_understanding.py  search.py  web_search.py
langgraph/: lg-test.py
llamaindex-examples/: llamaindex-agent.py  llamaindex-hf-inference.py  llamaindex-query.py
