[project]
name = "hf-agents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[inference]>=0.34.4",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-llms-huggingface-api>=0.6.0",
    "llama-index-vector-stores-chroma>=0.5.2",
    "python-dotenv>=1.1.1",
]
